[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "gh_test"
readme = "README.md"
dynamic = [ "dependencies", "version",]

[project.scripts]
gh-test = "gh_test.__main__:main"

[tool.kedro]
package_name = "gh_test"
project_name = "gh_test"
kedro_init_version = "0.19.3"
tools = [ "Custom Logging", "Data Structure",]
example_pipeline = "True"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.dependencies]
file = "requirements.txt"

[tool.setuptools.dynamic.version]
attr = "gh_test.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false
